# miet-dbms

1-lab/: db.sql  drop.sql  requests.sql  result.txt
2-lab/: clear.sql  fill.sql  result.txt
3-lab/: db.dbm  generated.sql
4-lab/backend/app/: __init__.py
4-lab/backend/app/crud_compiler/: controller.py  repository.py
4-lab/backend/app/entities/models/: __init__.py  procedure.py  room.py
4-lab/backend/app/entities/schemas/: room.py
4-lab/backend/app/utils/: schema.py
4-lab/frontend/: karma.conf.js  package-lock.json
4-lab/frontend/src/: styles.scss
4-lab/frontend/src/app/: app.states.ts
4-lab/frontend/src/app/models/: IPatient.ts  IRoom.ts  IServerResponse.ts
4-lab/frontend/src/app/pages/: pages.main.comnonent.ts  pages.main.component.scss
4-lab/frontend/src/app/services/: requests.service.ts
4-lab/frontend/src/environments/: environment.prod.ts  environment.ts
5-lab/: gists.py  pyproject.toml
5-lab/sql/: ages.sql  female_ages.sql  men_ages.sql  procedures.sql
8-lab/: alter.sql  clear.sql  result.txt  test.sql  trigger.sql
lab_1/: db.sql  fill.sql  requests.sql  task.doc
lab_2/: db.sql  drop.sql
lab_4/backend/: setup.py
lab_4/backend/app/: __init__.py  routes.py
lab_4/backend/app/controllers/: __init__.py
lab_4/backend/app/crud_compiler/: controller.py  service.py
lab_4/backend/app/entities/models/: patient.py  room.py
lab_4/backend/app/errors/: __init__.py
lab_4/frontend/: angular.json  package.json
lab_4/frontend/src/: proxy.conf.json
lab_4/frontend/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
(+15 files in other folders)
