[tool.poetry]
name = "5-lab"
version = "0.1.0"
description = ""
authors = ["st-a-novoseltcev <st.a.novoseltcev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.1"
SQLAlchemy = "^1.4.35"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
